--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </nav>
 
     <div class="search-box">
-        <input type="text" id="searchInput" placeholder="Search stationery...">
+        <input type="text" placeholder="Search stationery...">
     </div>
 </header>
 
-<!-- HERO WITH BACKGROUND -->
+<!-- HERO -->
 <section class="hero">
     <div class="hero-content">
         <h1>Everything Students Need, In One Place</h1>
@@ -34,7 +34,7 @@
 </section>
 
 <!-- CATEGORIES -->
-<section class="section">
+<section class="section section-box">
     <h2>Shop by Category</h2>
     <div class="category-grid">
         <div class="category-card">✏️ Pencils & Pens</div>
@@ -49,50 +49,54 @@
 </section>
 
 <!-- PRODUCTS -->
-<section class="section light">
+<section class="section section-box">
     <h2>Popular Products</h2>
     <div class="product-grid">
         <div class="card">
             <img src="sketch.jpg">
             <h3>Color Pencil Set</h3>
-            <button onclick="addToCart()">Add to Cart</button>
+            <button>Add to Cart</button>
         </div>
         <div class="card">
             <img src="pen.webp">
             <h3>Sketch Pens</h3>
-            <button onclick="addToCart()">Add to Cart</button>
+            <button>Add to Cart</button>
         </div>
         <div class="card">
             <img src="notebook.jpg">
             <h3>Notebook Pack</h3>
-            <button onclick="addToCart()">Add to Cart</button>
+            <button>Add to Cart</button>
         </div>
         <div class="card">
             <img src="book.jpg">
             <h3>Story Book</h3>
-            <button onclick="addToCart()">Add to Cart</button>
+            <button>Add to Cart</button>
         </div>
     </div>
 </section>
 
-<!-- KIDS SAFE ZONE -->
-<section class="kids-zone">
+<!-- KIDS ZONE -->
+<section class="kids-zone section-box">
     <div class="kids-text">
         <h2>Kids Special – Safe & Fun Learning</h2>
         <p>
             Carefully selected stationery for children.
             Bright colors, safe materials, and learning-focused designs.
         </p>
-        <button>Explore Kids Collection</button>
+        <button class="kids-btn">Explore Kids Collection</button>
     </div>
     <img src="kid1.jpeg">
 </section>
 
 <!-- FOOTER -->
 <footer>
-    <p>© 2026 EduCart | Student-Friendly Stationery Store</p>
+    <div class="contact">
+        <p>📧 educart@gmail.com</p>
+        <p>📞 +91 98765 43210</p>
+        <p>📍 Chennai, India</p>
+    </div>
+    <p class="copyright">© 2026 EduCart Student</p>
 </footer>
 
-<script src="script.js"></script>
 </body>
 </html>
