--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
     <title>EduCart | Student Stationery Store</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- Basic Meta Required by Google & Browsers -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Page Title -->
+<title>EduCart | Student Stationery Store</title>
+
+<!-- SEO Description -->
+<meta name="description" content="EduCart — Affordable, quality stationery for students. Shop pencils, pens, notebooks, bags, art supplies & more!">
+
+<!-- Robots (allow indexing/crawling) -->
+<meta name="robots" content="index, follow">
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://educart-six.vercel.app/">
+
+<!-- Google Search Console Verification -->
+<meta name="google-site-verification" content="YOUR_GOOGLE_VERIFICATION_CODE">
+
+<!-- Open Graph (Better Search Preview) -->
+<meta property="og:title" content="EduCart | Student Stationery Store">
+<meta property="og:description" content="EduCart — Affordable, quality stationery for students. Shop now!">
+<meta property="og:url" content="https://educart-six.vercel.app/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://educart-six.vercel.app/path-to-your-social-image.png">
+
+<!-- Twitter Card (Optional) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="EduCart | Student Stationery Store">
+<meta name="twitter:description" content="Affordable stationery for students — shop now!">
+<meta name="twitter:image" content="https://educart-six.vercel.app/path-to-your-social-image.png">
+
 </head>
 <body>
 
